# =============================================================================
# nexacore-cmd-curl — `curl` command for NexaCore OS
# =============================================================================
# Minimal HTTP/1.1 client command: request construction, response parsing,
# URL parsing, argument processing.
#
# Architecture:
#   `no_std + alloc` library crate. Zero external production dependencies.
#
# References:
#   - RFC 7230 (HTTP/1.1 Message Syntax)
#   - RFC 3986 (URI)
#   - NCIP-Net-N7.7 (curl command specification)
# =============================================================================

[package]
name             = "nexacore-cmd-curl"
description      = "curl command for NexaCore OS — minimal HTTP/1.1 client."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[features]
# Default build stays dependency-free and bare-metal-buildable. The optional
# `tls` feature wires in the TLS 1.3 stack for `https://` fetches (WS4-03.8);
# it pulls `nexacore-tls` (→ getrandom), so it is NOT part of the
# `x86_64-unknown-none` build surface — the plaintext HTTP path is unchanged.
default = []
tls     = ["dep:nexacore-tls"]

[dependencies]
# NOTE: no first-party *production* dependencies in the default build. The
# `nexacore-types` dep was removed in TASK-13 because its default features
# (id-generation -> getrandom) broke out-of-workspace x86_64-unknown-none
# consumers (nexacore-runtime-image, ADR-0035 D4). `nexacore-tls` is optional
# and gated behind the `tls` feature for exactly the same reason.
nexacore-tls = { workspace = true, optional = true }

[dev-dependencies]
# Used only by the `tls`-gated HTTPS round-trip test to mint an ed25519 cert
# chain for the in-process TLS server.
nexacore-crypto = { workspace = true }
