# =============================================================================
# nexacore-cmd-netstat — `netstat` command for NexaCore OS
# =============================================================================
# Network connection listing: display active connections and sockets.
#
# Architecture:
#   `no_std + alloc` library crate. Zero external production dependencies.
#
# References:
#   - NCIP-Net-N7.5 (netstat command specification)
# =============================================================================

[package]
name             = "nexacore-cmd-netstat"
description      = "netstat command for NexaCore OS — network connection listing."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
nexacore-types = { workspace = true }
