# =============================================================================
# nexacore-cmd-wget — `wget` command for NexaCore OS
# =============================================================================
# File downloader command: URL parsing, filename extraction, range headers,
# progress formatting, argument parsing.
#
# Architecture:
#   `no_std + alloc` library crate. Zero external production dependencies.
#
# References:
#   - RFC 7233 (HTTP Range Requests)
#   - NCIP-Net-N7.8 (wget command specification)
# =============================================================================

[package]
name             = "nexacore-cmd-wget"
description      = "wget command for NexaCore OS — file downloader."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

[dependencies]
nexacore-types = { workspace = true }
